--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@ body {
   padding: 0;
 }
 
+.menu {
+  display: flex;
+  justify-content: left;
+}
+
+.menu {
+  .menuButton {
+    margin-left: 5px;
+  }
+}
+
 #game-space {
   height: 100vh;
   width: 100vw;
